--- a/css/OnOffSwitch.css
+++ b/css/OnOffSwitch.css
@@ -45,3 +45,9 @@
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
     right: 0px;
 }
+body.dark{
+    background-color: #1a1a1a;
+}
+cadre_interne {
+    background-color: gray;
+}
